--- a/public/stylesheets/preco.0.0.5.scss
+++ b/public/stylesheets/preco.0.0.5.scss
@@ -16,6 +16,7 @@
 // Components @import "./components/";
 @import "./components/font-awesome/fa-regular";
 @import "./components/font-awesome/icons";
+@import "./components/markdown";
 @import "./components/app-structure";
 @import "./components/main-nav";
 @import "./components/splash-screen";
