--- a/public/stylesheets/components/_project-section.scss
+++ b/public/stylesheets/components/_project-section.scss
@@ -31,12 +31,17 @@
     background-size: cover;
   }
 
-  &__info {
-    margin: 0 $g-5;
+  &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
-  &__blurb {
-    @include t-body;
+  &__info {
+    margin: 0 $g-5;
   }
 
   &__links {
