--- a/public/stylesheets/add-forms.0.0.4.scss
+++ b/public/stylesheets/add-forms.0.0.4.scss
@@ -17,3 +17,4 @@
 @import "./components/app-structure";
 @import "./components/main-header";
 @import "./components/add-form";
+@import "./components/edit-table";
