--- a/public/stylesheets/components/_add-form.scss
+++ b/public/stylesheets/components/_add-form.scss
@@ -5,6 +5,10 @@
   border-radius: 4px;
   margin: $g-5;
 
+  ::placeholder {
+    color: #ccc;
+  }
+
   &__fieldset {
     margin: $g-4 $g-2;
     margin-right: 0;
@@ -44,10 +48,6 @@
 
       &:focus {
         box-shadow: inset 0 0 0 rgba(255, 0, 0, 0);
-      }
-
-      &::placeholder {
-        color: #ddd;
       }
     }
 
