--- a/public/stylesheets/preco.0.0.5.scss
+++ b/public/stylesheets/preco.0.0.5.scss
@@ -18,6 +18,7 @@
 @import "./components/font-awesome/icons";
 @import "./components/markdown";
 @import "./components/app-structure";
+@import "./components/preco-logo";
 @import "./components/main-nav";
 @import "./components/splash-screen";
 @import "./components/main-header";
@@ -25,3 +26,4 @@
 @import "./components/contact-section";
 @import "./components/company-section";
 @import "./components/project-section";
+@import "./components/copyright-section";
